2005-02-25  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (makePrivate): New factory method.

2005-02-24  Per Bothner  <per@bothner.com>

	* InPort.java (inLocation): New static ThreadLocation.
	(inDefault, setInDefault): Use inLocation.
	* OutPort.java (outLocation, errLocation): New static ThreadLocations.
	(outDefault, setOutDefault): Use outLocation.
	(errDefault, setErrDefault): Use errLocation.
	* Future.java (in, out, err): This fields are now only used to
	initialize a Thread, not by inDefault/outDefault/errDefault.

	* OutPort.java (endGroup): Fix small thinko.

	* CallContext.java (getEnvironment): If no Environment, create a new
	Environment that inherits from global, rather than using it directly.

2005-02-23  Per Bothner  <per@bothner.com>

	* Symbol.java (hasEmptyNamespace): New method.

2005-02-20  Per Bothner  <per@bothner.com>

	* ConstrainedLocation.java: New class, extends Location.
	* ReadOnlyLocation.java: New class, extends ConstrainedLocation.
	* ConstantLocation.java: Removed unused class.
	* Makefile.am: Update accordingly.
	* LocationProc.java (makeNamed): New factory method.
	(converter): Remove field - use ConstrainedLocation instead.
	(pushConverter): New method.
	(<init>(Location.Procedure)): Use pushConverter.
	(set0): Simplify since we don't have a converter.
	* ProcLocation.java (setWithSave, setRemove): Remove no-longer
	needed methods, thanks to location.makeProcLocation$V optimization.

	* ThreadLocation.java (DYNAMIC): Can't use static property for all
	anonymous ThreadLocations, since it might not be unique.  So remove.
	(unlink): New field, to control if went should unlink when finalizing.
	(LocationRef.finalize): Use Locations's symbol and propertyt to unlink.

2005-02-19  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (setGlobal): Allocate Location for global,
	if needed.

2005-02-18  Per Bothner  <per@bothner.com>

	* ThreadLocation.java: Improve garbage-collability.
	(DYNAMIC): New constant.